# expenses_logger

./: .gitignore  README.md  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 0bfb1ade26b4_initial_migration.py
expenses_logger/: globals.py  helper.py  main.py
expenses_logger/logic/: database.py  helper.py
expenses_logger/model/: models.py
expenses_logger/view/: create_new_database_dialog.py  custom_widgets.py  input_back_and_save_dialog.py  input_back_dialog.py  input_page.py  main_wizard.py  non_ascii_names_dialog.py  remove_entries_dialog.py  start_page.py
expenses_logger/view/ui/: ui_create_new_database_dialog.py  ui_input_back_and_save_dialog.py  ui_input_back_dialog.py  ui_input_page.py  ui_non_ascii_names_dialog.py  ui_remove_entries_dialog.py  ui_start_page.py
expenses_logger/view/ui/designer/: create_new_database_dialog.ui  input_back_and_save_dialog.ui  input_back_dialog.ui  input_page.ui  non_ascii_names_dialog.ui  remove_entries_dialog.ui  start_page.ui
